--- a/Connection/db_config.ini
+++ b/Connection/db_config.ini
@@ -5,3 +5,11 @@ user = postgres
 password = 1111
 database = laba2
 type = postgresql
+
+[users]
+admin = $2b$12$HsWHnyCEq2dxQX0xUTyXKOuo9BDvBz9jZjLqTQRa0no609wIobeF2
+user1 = $2b$12$nEzynaeJaDeKXCboxxeK6ePfWEGpMclkB8iL.vgTLO9Vpw.YF2FAK
+
+[roles]
+admin = admin
+user1 = user
