Авторизация с хэшированием и новой таблицей в БД

--- a/Connection/db_config.ini
+++ b/Connection/db_config.ini
@@ -6,10 +6,10 @@ password = 1111
 database = laba2
 type = postgresql
 
-[users]
-admin = $2b$12$HsWHnyCEq2dxQX0xUTyXKOuo9BDvBz9jZjLqTQRa0no609wIobeF2
-user1 = $2b$12$nEzynaeJaDeKXCboxxeK6ePfWEGpMclkB8iL.vgTLO9Vpw.YF2FAK
-
-[roles]
-admin = admin
-user1 = user
+;[users]
+;admin = $2b$12$HsWHnyCEq2dxQX0xUTyXKOuo9BDvBz9jZjLqTQRa0no609wIobeF2
+;user1 = $2b$12$nEzynaeJaDeKXCboxxeK6ePfWEGpMclkB8iL.vgTLO9Vpw.YF2FAK
+;
+;[roles]
+;admin = admin
+;user1 = user
